# skelly

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  lefthook.toml  rustfmt.toml
.github/workflows/: ci.yml
examples/: inputs_from_toml.rs  load_skelly.rs  read_cli_args_and_print.rs  render_template.rs  skelly.toml
githooks/: pre-commit  setup.sh
src/: actions.rs  adapters.rs  app.rs  cli.rs  config.rs  lib.rs  main.rs  renderer.rs  validation.rs
src/adapters/: mod.rs  render_skeleton.rs
src/usecases/: mod.rs  render_content.rs  render_skeleton.rs  render_text.rs
