[package]
name = "skelly"
version = "1.1.0"
description = "A simple scaffold tool written in Rust."
authors = ["Emerson Max de Medeiros Silva <emersonmx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1"
thiserror = "2.0"
toml = "0.8.6"
walkdir = "2"
