[package]
name = "skelly"
version = "1.2.1"
description = "A simple scaffold tool written in Rust."
authors = ["Emerson Max de Medeiros Silva <emersonmx@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1"
thiserror = "2"
toml = "1"
walkdir = "2"
